<resources>
    <string name="app_name">Yiyuan_Radio</string>
    <string name="nil" translatable="false">null</string>
    <string name="main_activity_label" translatable="false">RFM Radio</string>
    <string name="progress_init">Please, wait… Initializing… Version %s</string>
    <string name="player_event_frequency_changed">Frequency changed to %5.1f MHz</string>
    <string name="toggle_play_pause">Play</string>
    <string name="jump_up">Jump up</string>
    <string name="seek_up">Seek up</string>
    <string name="jump_down">Jump down</string>
    <string name="seek_down">Seek down</string>
    <string name="progress_installing">Install binary…</string>
    <string name="progress_launching">Launching…</string>
    <string name="progress_starting">Enabling tuner…</string>
    <string name="progress_searching">Searching…</string>
    <string name="progress_stopping">Stopping…</string>
    <string name="main_rssi_db">%d dB</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_open_list">Station list</string>
    <string name="menu_record">Record</string>
    <string name="menu_about">About</string>
    <string name="menu_open_list_favorites">Favorites</string>
    <string name="popup_preset_add">Add</string>
    <string name="popup_preset_rename">Rename</string>
    <string name="popup_preset_replace">Replace</string>
    <string name="popup_preset_remove">Remove</string>
    <string name="popup_station_create">Create</string>
    <string name="popup_station_create_hint">Station name…</string>
    <string name="popup_station_rename">Rename</string>
    <string name="popup_station_remove">Remove</string>
    <string name="favorite_list_item_add" translatable="false">+</string>
    <string name="about_version" translatable="false">v%s</string>
    <string name="about_author">Vladislav Veluga © 2020–2021</string>
    <string name="menu_favorite_list_create">Create list</string>
    <string name="menu_favorite_list_remove">Remove this list</string>
    <string name="popup_favorite_list_create">Create favorite list</string>
    <string name="favorite_list_create_error_already_exists">List with this name already exists</string>
    <string name="favorite_list_create_error_invalid_name">Invalid name. Only A–Z, a–z, \'–\', \'_\' and 0–9 can be used.</string>
    <string name="favorite_list_remove_title">Confirmation</string>
    <string name="favorite_list_remove_message">Are you sure, that you want remove list \'%s\'?</string>
    <string name="pref_activity_title">Settings</string>
    <string name="pref_header_tuner">Tuner</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_app">Application</string>
    <string name="pref_header_info">Info</string>
    <string name="pref_tuner_spacing">Spacing</string>
    <string name="pref_tuner_rds_enable">Enable RDS</string>
    <string name="pref_tuner_rds_enabled">Show RDS such as Program Service and Radio Text</string>
    <string name="pref_tuner_rds_disabled">Do not show RDS</string>
    <string name="pref_audio_source">Audio source</string>
    <string name="pref_app_auto_startup">Autostart</string>
    <string name="pref_app_auto_startup_enabled">Start playing audio immediately when the application starts</string>
    <string name="pref_auto_startup_disabled">Audio playback needs to be started manually</string>
    <string name="pref_header_info_links">Links</string>
    <string name="pref_header_info_authors">Authors</string>
    <string name="pref_info_link_4pda">4pda topic</string>
    <string name="pref_info_link_4pda_summary">Topic about this application on the Russian-language forum</string>
    <string name="pref_info_link_github">GitHub repository</string>
    <string name="pref_info_link_github_summary">Repository with the code for this application. Project is OpenSource</string>
    <string name="pref_info_contributors_title">Contributors</string>
    <string name="pref_info_contributors_content">Vladislav Veluga — developer;\nMike Reid — developer of Spirit 1\/2\nKonstantin Manaev — translator (English)</string>
    <string name="pref_info_link_telegram">Telegram channel</string>
    <string name="pref_info_link_telegram_summary">Publishes news and new releases of the application</string>
    <string name="pref_tuner_driver">Tuner driver</string>
    <string name="pref_tuner_antenna">Antenna</string>
    <string name="pref_tuner_antenna_message">By default it is \'0\'.\nOn some Sony devices it is \'1\'.</string>
    <string name="pref_tuner_audio_source_message">0 - default\n1998 - \'new\' FM source</string>
    <string name="pref_audio_service">Audio service</string>
    <string name="toolbar_favorite_title">Favorites</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notification_show_ps_enabled">If the station is transmitting PS, it will be shown in the notification</string>
    <string name="pref_notification_show_ps_disabled">The name from the favorites will be displayed as station name</string>
    <string name="pref_notification_show_ps">Show PS in title</string>
    <string name="pref_tuner_rds_description">RDS - Radio Data System\nDisplay of radio-related information transmitted by radio stations.\nPS - Program Service (usually name of station)\nRT - Radio Text (usually name of current track, info about station)\nAF - Alternative Frequencies (list of frequencies on which the same station is broadcasting in neighboring regions )\nPTY - Program TYpe (genre of station)</string>
    <string name="pref_header_recording">Recording</string>
    <string name="pref_recording_path_title">Directory for saving</string>
    <string name="pref_recording_path_value" translatable="false">RFM/recording/$y-$m-$d</string>
    <string name="pref_recording_name_title">Filename</string>
    <string name="pref_recording_name_value" translatable="false">FM-$h$i$s-$f</string>
    <string name="pref_recording_path_name_description" tools:ignore="TypographyDashes">Available variables:\n$y - year\n$m - month\n$d - day of month\n$h - hour\n$i - minute\n$s - second\n$f - frequency (e.g., 103.4 MHz = 1034)\n$r - random number 10000-99999\nExample:\nDirectory: FM/$y-$m-$d -> FM/2020-01-27\nFilename: Rec-$h_$i_$s_$f -> Rec_23_01_49_0906.wav</string>
    <string name="pref_recording_format_title">Recording format</string>
    <string name="pref_recording_convert_summary">WAV - raw/large audio, MP3 - compressed/small</string>
    <string name="pref_recording_show_notify">Show notifications</string>
    <string name="pref_recording_show_notify_summary">At the end of the recording, display information about the saved file</string>
    <string name="pref_info_version_title">Version</string>
    <string name="pref_info_link_site">Application\'s site</string>
    <string name="pref_info_link_site_summary" translatable="false">rfm.velu.ga</string>
    <string name="pref_version_check_progress">Checking for updates…</string>
    <string name="pref_version_check_fresh_title">It\'s OK!</string>
    <string name="pref_version_check_fresh_content">The latest version is installed. No update required.</string>
    <string name="pref_version_check_need_update_title">Update available</string>
    <string name="pref_version_check_need_update_content">Latest app version: v%1$s (%2$d)\nInstalled app version: %3$s (v%4$d)\n\nUpdates:\n%5$s\n\nOpen the release page to download the installer?</string>
    <string name="pref_version_check_need_update_ok">Update</string>
    <string name="pref_version_check_fresh_ok">Well</string>
    <string name="notification_mhz">%.1f MHz | %d dB</string>
    <string name="service_record_unsupported">Recording not supported by this driver.</string>
    <string name="notification_recording">Recording: %s (%.1f MB)</string>
    <string name="notification_recorded">Recording %3$s completed: %1$s (%2$.1f MB)</string>
    <string name="toast_record_ended">Record saved as %1$s\nSize: %2$.1f MB\nDuration: %3$s</string>
    <string name="main_warning_pref_changed_title">Attention!</string>
    <string name="main_warning_pref_changed_content">To apply some settings that you changed, you need to completely restart the application:\n1. Stop the tuner (shutdown button at the top)\n2. Close and swipe the application out of multitasking\n3. Launch the application.</string>
    <string name="pref_notification_seek_by_favorites">Navigate through favorites</string>
    <string name="pref_notification_seek_by_favorites_enabled">Using the arrows in the notification, jump to the prev/next favorite</string>
    <string name="pref_notification_seek_by_favorites_disabled">Use the arrows in the notification to search for the prev/next station</string>
    <string name="main_error_launching">An error occurred while starting the tuner. The application cannot work. Try changing the tuner in settings and restarting the app. If nothing has changed, then this means that the application is not supported on this device or on this operating system.</string>
    <string name="main_error_launching_title">Fatal error</string>
    <string name="pref_header_rds">RDS (Radio Data System)</string>
    <string name="pref_tuner_power_mode_low">When the app is in the background, the tuner will consume less power.</string>
    <string name="pref_tuner_power_mode_normal">Power saving is disabled.</string>
    <string name="pref_tuner_power_mode">Power saving</string>
    <string name="pref_tuner_region">Region / band</string>
    <string name="pref_warning_applying_only_after_restart">Attention! These changes will apply only after full restart
        the app.</string>
    <string name="pref_tuner_stereo">Stereo</string>
    <string name="pref_tuner_stereo_on">Use stereo if available</string>
    <string name="pref_tuner_stereo_off">Always mono</string>
    <string name="donation_window_title">I\'ve sorry, but…</string>
    <string name="donation_window_donate">Donate</string>
    <string name="donation_window_later">Ask later</string>
    <string name="donation_window_never">Never ask</string>
    <string name="donation_window_message">RFM-Radio is an open source project that is free and voluntarily developed
		by one person.\nIf you are interested in the future development of the project or just want to say \"thank you\",
		you can donate a small amount in various ways.</string>
    <string name="pref_tuner_antenna_error">Error while set antenna. Please, return valid value (usually 0)</string>
    <string name="pref_version_check_error">An error occurred during the request: %s</string>
    <string name="menu_favorite_list_search">Scan for stations</string>
    <string name="favorite_list_search_confirm_title">Attention!</string>
    <string name="favorite_list_search_confirm_message">This favorite list will be cleared and replaced by found stations.</string>
    <string name="favorite_list_search_confirm_continue">Remove and scan</string>
    <string name="favorite_list_search_confirm_discard">Discard</string>
    <string name="favorite_list_search_progress">Please, wait… I trying to find stations.</string>
    <string name="pref_tuner_rds_auto_af">Automatic jump by AF</string>
    <string name="pref_tuner_rds_auto_afenabled">When the signal deteriorates and there are alternative frequencies of
		the radio station, the tuner will automatically switch to the frequency with the best quality.
	</string>
    <string name="pref_tuner_rds_auto_af_disabled">If the signal deteriorates, nothing will happen, the data on alternative frequencies from the radio station will be ignored.</string>
    <string name="menu_speaker">Play through speaker</string>
</resources>