<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ToggleButton
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="400dp"
            android:gravity="center"
            android:text="搜台"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="收藏"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        <FrameLayout
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_border">
            <FrameLayout
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/frequency_mhz"
                    android:layout_width="150dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="88.6"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/name_mhz"
                    android:layout_width="150dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="85dp"
                    android:textSize="12sp"
                    android:text="湖南交通广播"
                    android:textColor="@color/black"/>
            </FrameLayout>
            <ToggleButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="250dp"
                android:src="@drawable/ic_heart"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <HorizontalScrollView
                android:id="@+id/frequency_seek_wrap"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seek_frequency_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/seek_frequency_height">

                    <com.sany.yiyuan_radio.view.FrequencySeekView
                        android:id="@+id/frequency_seek"
                        style="@style/FrequencySeekBar"
                        android:layout_width="880dp"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/seek_frequency_padding_start"
                        android:paddingEnd="@dimen/seek_frequency_padding_end"
                        android:thumbTint="@android:color/transparent" />
                </FrameLayout>
            </HorizontalScrollView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <ImageButton
                android:id="@+id/ctl_seek_down"
                android:src="@drawable/ic_seek_down"
                android:layout_width="@dimen/ctl_size_seek"
                android:layout_height="@dimen/ctl_size_seek"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/seek_down"
                app:layout_constraintEnd_toStartOf="@+id/ctl_go_down"
                app:layout_constraintTop_toTopOf="@+id/ctl_toggle"
                app:layout_constraintBottom_toBottomOf="@+id/ctl_toggle"/>

            <ImageButton
                android:id="@+id/ctl_go_down"
                android:src="@drawable/ic_go_down"
                android:layout_width="@dimen/ctl_size_jump"
                android:layout_height="@dimen/ctl_size_jump"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/jump_down"
                app:layout_constraintEnd_toStartOf="@+id/ctl_toggle"
                app:layout_constraintTop_toTopOf="@+id/ctl_toggle"
                app:layout_constraintBottom_toBottomOf="@+id/ctl_toggle"/>

            <ImageButton
                android:id="@+id/ctl_toggle"
                android:src="@drawable/ic_play"
                android:layout_width="@dimen/ctl_size_toggle"
                android:layout_height="@dimen/ctl_size_toggle"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/toggle_play_pause"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequency_pty"
                android:layout_marginTop="8dp"/>

            <ImageButton
                android:id="@+id/ctl_go_up"
                android:src="@drawable/ic_go_up"
                android:layout_width="@dimen/ctl_size_jump"
                android:layout_height="@dimen/ctl_size_jump"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/jump_up"
                app:layout_constraintStart_toEndOf="@+id/ctl_toggle"
                app:layout_constraintTop_toTopOf="@+id/ctl_toggle"
                app:layout_constraintBottom_toBottomOf="@+id/ctl_toggle"/>

            <ImageButton
                android:id="@+id/ctl_seek_up"
                android:src="@drawable/ic_seek_up"
                android:layout_width="@dimen/ctl_size_seek"
                android:layout_height="@dimen/ctl_size_seek"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/seek_up"
                app:layout_constraintStart_toEndOf="@+id/ctl_go_up"
                app:layout_constraintTop_toTopOf="@+id/ctl_toggle"
                app:layout_constraintBottom_toBottomOf="@+id/ctl_toggle"/>

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>